[gd_scene load_steps=3 format=3 uid="uid://bchtlllt7j06x"]

[ext_resource type="Script" path="res://Components/BossHealthBar/boss_health_bar.gd" id="1_6s5dp"]

[sub_resource type="LabelSettings" id="LabelSettings_ev4s7"]
font_size = 40

[node name="BossHealthBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6s5dp")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -115.0
offset_right = 231.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
text = "Anky"
label_settings = SubResource("LabelSettings_ev4s7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -301.0
offset_top = -66.0
offset_right = 299.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
fill_mode = 1
show_percentage = false

[connection signal="ready" from="HealthBar" to="." method="_on_health_bar_ready"]
